Implement swagger configurer factory and OpenAPIDocument creators